[project]
name = "piccord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncpg>=0.31.0",
    "discord>=2.3.2",
    "imagehash>=4.3.2",
    "memory-profiler>=0.61.0",
    "numpy>=2.0.2",
    "pillow>=11.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.2.1",
]
